tests/neg-custom-args/captures/classifiers-secondclass.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/classifiers-secondclass.scala:42:10 --------------------
42 |        f.write(42)         // error, the error stems from here
   |        ^^^^^^^
   |Reference `f.write` is not included in the allowed capture set {any.only[Read]}
   |of an enclosing function literal with expected type (Int, Int) ->{any.only[Read]} Int.
   |
   |where:    any is a root capability created in anonymous function of type (f²: Levels.File^): Unit when checking argument to parameter op of method parReduce
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/classifiers-secondclass.scala:54:12 --------------------
54 |          f.write(42)         // error, the error stems from here
   |          ^^^^^^^
   |Reference `f.write` is not included in the allowed capture set {any.only[Read]}
   |of an enclosing function literal with expected type (Int, Int) ->{any.only[Read]} Int.
   |
   |where:    any is a root capability created in anonymous function of type (g: Levels.File^): Unit when checking argument to parameter op of method parReduce
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/classifiers-secondclass.scala:57:12 --------------------
57 |          g.write(42)         // error, the error stems from here
   |          ^^^^^^^
   |Reference `g.write` is not included in the allowed capture set {any.only[Read]}
   |of an enclosing function literal with expected type (Int, Int) ->{any.only[Read]} Int.
   |
   |where:    any is a root capability created in anonymous function of type (g²: Levels.File^): Unit when checking argument to parameter op of method parReduce
